--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.42",
-    "@babel/preset-env": "^7.0.0-beta.42",
-    "babel-loader": "^8.0.0-beta",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.0.7",
     "style-loader": "^0.20.3",
@@ -21,6 +23,7 @@
     "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "jquery": "^3.3.1",
     "leancloud-storage": "^3.6.3"
   }
